change header on mobile

--- a/Alex Fitness/index.html
+++ b/Alex Fitness/index.html
@@ -30,7 +30,9 @@
                     </nav>
                 </div>
 
-                <div class="col-lg-4 col-xl-4 order-2 order-md-1 order-lg-2 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-lg-4 col-xl-4 order-2 order-md-1 order-lg-2 d-flex  justify-content-between justify-content-md-center align-items-center">
+                    <!-- Logo -->
+                    <a class="logo d-block" href="#">Alex Fitness</a>
                     <!-- Toggle Button -->
                     <button class="navbar-toggler second-button collapsed d-sm-block d-md-none" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
                         <div class="open-nav">
@@ -40,10 +42,8 @@
                             <span></span>
                         </div>
                     </button>
-                    <!-- Logo -->
-                    <a class="logo d-block" href="#">Alex Fitness</a>
                 </div>
-
+                
                 <!-- Buttons -->
                 <div class="col-md-5 col-lg-4 col-xl-4 order-3 d-flex justify-content-center justify-content-md-end align-items-center">
                     <a href="#" class="btn btn--pink">Tickets</a>
