--- a/Digital/index.html
+++ b/Digital/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- Header -->
-    <header class="d-flex flex-column flex-lg-row align-items-center">
+    <header class="d-flex flex-md-column flex-lg-row align-items-center">
         <a href="#" class="my-0 mr-lg-auto">
             <svg version="1.1" class="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                 y="0px" viewBox="0 0 179.6 55.5" style="enable-background:new 0 0 179.6 55.5;" xml:space="preserve">
@@ -69,7 +69,16 @@
                 <path class="dot" d="M172.6,30.8c3.9,0,7,3.1,7,7s-3.1,7-7,7s-7-3.1-7-7S168.8,30.8,172.6,30.8z" />
             </svg>
         </a>
-        <nav>
+
+        <!-- Hamburger button -->
+        <div class="open-nav ml-auto d-sm-block d-md-none">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
+        <nav class="main-nav">
             <a href="#">Features</a>
             <a href="#">Offer</a>
             <a href="#">Pricing</a>
@@ -285,7 +294,7 @@
 
         <section class="container mt-155">
             <div class="row">
-                <div class="col-sm-4 box text-center">
+                <div class="col-md-4 box text-center">
                     <img src="assets/track-record.jpg" alt="" class="img-fluid" />
                     <div class="box-info">
                         <h3 class="box-info__title">Best TrackRecord</h3>
@@ -294,7 +303,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-4 box text-center">
+                <div class="col-md-4 box text-center">
                     <img src="assets/trusted-leaders.jpg" alt="" class="img-fluid" />
                     <div class="box-info">
                         <h3 class="box-info__title">Trusted by leaders</h3>
@@ -303,7 +312,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-4 box text-center">
+                <div class="col-md-4 box text-center">
                     <img src="assets/brand-equity.jpg" alt="" class="img-fluid" />
                     <div class="box-info">
                         <h3 class="box-info__title">Brand Equity</h3>
@@ -314,18 +323,18 @@
             </div>
         </section>
 
-        <section class="container about-us">
+        <section class="container about-us text-center text-md-left">
             <div class="row position-relative">
-                <div class="col-sm-4 zi_1">
+                <div class="col-lg-4 zi_1">
                     <h2 class="mb_25">We are <br>Creative Agency</h2>
                     <p class="mb-0 font-weight-normal lh_30">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <p class="lh_30">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed </p>
                     <a href="#" class="btn btn--gradient btn--round text-uppercase mt_35">Read more</a>
                 </div>
 
-                <h1 class="text-center position-absolute">A</h1>
+                <h1 class="text-center">A</h1>
                 
-                <div class="col-sm-4 offset-sm-4">
+                <div class="col-lg-4 offset-lg-4">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 81.87 87.49" class="quotes">
                         <defs>
                             <style>
@@ -348,66 +357,69 @@
 
         <section class="features container position-relative mb_70">
             <div class="row">
-                <div class="col-md-6 pb_30">
+                <div class="white-box text-center">
+                    <h2>Amazing features</h2>
+                    <p class="font-italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                        nulla pariatur.</p>
+                    <a href="#" class="btn btn--gradient btn--round text-uppercase">Read more</a>
+                </div>
+
+                <div class="col-md-6 text-center text-md-left pb_30">
                     <img src="assets/people-meeting.jpg" class="img-fluid" alt="" />
                 </div>
 
-                <div class="col-md-6 pb_30">
+                <div class="col-md-6 text-center text-md-left pb_30">
                     <img src="assets/view-sketches.jpg" class="img-fluid" alt="" />
                 </div>
 
-                <div class="col-md-6 pb_30">
+                <div class="col-md-6 text-center text-md-left pb_30">
                     <img src="assets/photography.jpg" class="img-fluid" alt="" />
                 </div>
 
-                <div class="col-md-6 pb_30">
+                <div class="col-md-6 text-center text-md-left pb_30">
                     <img src="assets/design.jpg" class="img-fluid" alt="" />
-                </div>
-
-                <div class="white-box text-center">
-                    <h2>Amazing features</h2>
-                    <p class="font-italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                    <a href="#" class="btn btn--gradient btn--round text-uppercase">Read more</a>
                 </div>
             </div>
         </section>
 
         <section class="services container-fluid position-relative">
-            <div class="row">
-                <div class="col-sm-7 d-flex" style="background: #f4f4f4;">
+            <div class="row align-items-stretch">
+                <div class="col-md-7 d-flex" style="background: #f4f4f4;">
                     <div class="services__text align-self-center ml-auto">
-                        <h2>Services<br> We Provide</h2>
+                        <h2 class="mb_15">Services<br> We Provide</h2>
                         <p class="mb-0 font-weight-normal lh_30">Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod tempor incididunt ut labore et dolore<br> magna aliqua.</p>
                         <p class="lh_30">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
                         <a href="#" class="btn btn--gradient btn--round text-uppercase mt_35">Read more</a>
                     </div>
                 </div>
 
-                <div class="col-sm-5" style="background: url('assets/services.jpg') no-repeat center center / cover; height: 64rem;">
+                <div class="col-md-5" style="background: url('assets/services.jpg') no-repeat center center / cover; min-height: 64rem;">
                     <div class="services-box d-flex flex-wrap">
                         <div class="services-box__item services-box__item d-flex flex-column align-items-center justify-content-center hi_124">
-                            <img src="assets/flag.svg" alt="" width="40" height="46" />
+                            <img src="assets/icons/flag.svg" alt="" width="40" height="46" />
                             <p class="text-center font-weight-bold fs_17 text-white mt_8 mb-0">Logo &amp;<br>Branding</p>
                         </div>
                         <div class="services-box__item services-box__item d-flex flex-column align-items-center justify-content-center hi_124">
-                            <img src="assets/digital-marketing.svg" alt="" width="46" height="46" />
+                            <img src="assets/icons/digital-marketing.svg" alt="" width="46" height="46" />
                             <p class="text-center font-weight-bold fs_17 text-white mt_8 mb-0">Social Media Branding</p>
                         </div>
                         <div class="services-box__item services-box__item d-flex flex-column align-items-center justify-content-center hi_154">
-                            <img src="assets/eye.svg" alt="" width="50" height="46" />
+                            <img src="assets/icons/eye.svg" alt="" width="50" height="46" />
                             <p class="text-center font-weight-bold fs_17 text-white mt_8 mb-0">Digital<br>Product</p>
                         </div>
                         <div class="services-box__item services-box__item d-flex flex-column align-items-center justify-content-center hi_154">
-                            <img src="assets/flag.svg" alt="" width="40" height="46" />
+                            <img src="assets/icons/responsive.svg" alt="" width="46" height="46" />
                             <p class="text-center font-weight-bold fs_17 text-white mt_8 mb-0">Mobile<br>&amp; Web</p>
                         </div>
                         <div class="services-box__item services-box__item d-flex flex-column align-items-center justify-content-center hi_134">
-                            <img src="assets/flag.svg" alt="" width="40" height="46" />
-                            <p class="text-center font-weight-bold fs_17 text-white mt_8 mb-0">Social Media Branding</p>
+                            <img src="assets/icons/copywriting.svg" alt="" width="40" height="46" />
+                            <p class="text-center font-weight-bold fs_17 text-white mt_8 mb-0">Website Copywriting</p>
                         </div>
                         <div class="services-box__item services-box__item d-flex flex-column align-items-center justify-content-center hi_134">
-                            <img src="assets/flag.svg" alt="" width="40" height="46" />
-                            <p class="text-center font-weight-bold fs_17 text-white mt_8 mb-0">Social Media Branding</p>
+                            <img src="assets/icons/seo.svg" alt="" width="40" height="46" />
+                            <p class="text-center font-weight-bold fs_17 text-white mt_8 mb-0">Complete SEO Solutions</p>
                         </div>
                     </div>
                 </div>
@@ -454,9 +466,9 @@
             </div>
         </section>
 
-        <section class="contaner-fluid mt_70">
-            <div class="row align-items-center">
-                <div class="col-sm-6">
+        <section class="container-fluid mt_70">
+            <div class="row align-items-stretch">
+                <div class="col-lg-6 d-flex align-items-center">
                     <div class="skills ml-auto">
                         <h2 class="title">Anita Allen</h2>
                         <p class="font-weight-bold fs_22">Graphic Designer</p>
@@ -486,14 +498,23 @@
                     </div>
                 </div>
 
-                <div class="col-sm-6 bg-gradient">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <img src="assets/anita.jpg" alt="" class="img-fluid" />
+                <div class="col-lg-6 bg-gradient">
+                    <div class="row mw_810">
+                        <div class="col-md-6 pl-0">
+                            <img src="assets/anita.jpg" alt="Anita Allen" class="img-fluid anita__img" />
                         </div>
-                        <div class="col-md-4">
-                           <p class="fw_500 fs_22 text-white">Ut enim ad minim veniam, quis</p>
-                           <p class="text-white">nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <div class="col-md-6 d-flex flex-column ptb_65">
+                            <p class="fw_500 fs_22 text-white">Ut enim ad minim veniam, quis</p>
+                            <p class="text-white">
+                                Nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Ut enim ad minim veniam,
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                            <div class="soc mt-auto">
+                                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-behance"></i></a>
+                            </div>
                         </div>
                     </div> 
                 </div>
@@ -502,7 +523,7 @@
 
         <section class="container-fluid">
             <div class="row align-items-stretch">
-                <div class="col-sm-4 bg-gradient d-flex justify-content-end">
+                <div class="col-xl-4 bg-gradient d-flex flex-column flex-xl-row align-items-center justify-content-xl-end">
                     <div class="price-box price-box--white text-center">
                         <h2 class="title">Professional</h2>
                         <p class="font-weight-bold fs_20">Website Design</p>
@@ -512,10 +533,10 @@
                     </div>
                 </div>
 
-                <div class="col-sm-8 bg-grey d-flex">
+                <div class="col-xl-8 bg-grey d-flex">
                     <div class="mw_970 align-self-center">
                         <div class="row align-items-center">
-                            <div class="col-sm-5">
+                            <div class="col-lg-5 d-flex justify-content-center justify-content-lg-start">
                                 <div class="price-box price-box--gradient bg-gradient">
                                     <h2 class=" font-weight-bold fs_70 text-white pl_10">Our Best</h2>
                                     <p class="font-weight-bold fs_25 text-white text-center mb_25">Feature</p>
@@ -523,7 +544,7 @@
                                         <li>Lorem ipsum dolor sit amet</li>
                                         <li>consectetur adipiscing elit,</li>
                                         <li>ed do eiusmod tempor</li>
-                                        <li>ncididunt ut labore et dolore</li>
+                                        <li>ncididunt ut dolore</li>
                                         <li>magna aliqua. Ut enim ad</li>
                                         <li class="pb-0">minim veniam, quis nostrud</li>
                                     </ul>
@@ -531,7 +552,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-sm-7">
+                            <div class="col-lg-7 text-center text-lg-left">
                                 <h2 class="title mb_25">Take your website<br>to the next level</h2>
                                 <p class="mb_30 font-weight-bold lh_30">
                                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
@@ -555,9 +576,9 @@
         <section class="socials">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-8 offset-sm-2 text-center">
+                    <div class="col-lg-8 offset-lg-2 text-center text-center">
                         <h2>Get in Touch</h2>
-                        <div class="social-icons d-flex justify-content-around">
+                        <div class="social-icons d-flex flex-wrap justify-content-around">
                             <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
                             <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
                             <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -575,11 +596,11 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-sm-10 offset-sm-1">
+                <div class="col-lg-10 offset-lg-1">
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                             <div class="media">
-                                <img class="align-self-start" src="assets/mail.svg" alt="mail" width="54" height="42" />
+                                <img class="align-self-start" src="assets/icons/mail.svg" alt="mail" width="54" height="42" />
                                 <div class="media-body">
                                     <h4 class="mt-0 text-uppercase">Email</h4>
                                     <a href="mailto:contact@digital.com" class="d-block">contact@digital.com</a>
@@ -588,9 +609,9 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                             <div class="media">
-                                <img class="align-self-start" src="assets/phone.svg" alt="mail" width="46" height="54" />
+                                <img class="align-self-start" src="assets/icons/phone.svg" alt="mail" width="46" height="54" />
                                 <div class="media-body">
                                     <h4 class="mt-0 text-uppercase">Call Us</h4>
                                     <a href="tel:1234567890" class="d-block">+123 456 7890</a>
@@ -599,9 +620,9 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                             <div class="media">
-                                <img class="align-self-start" src="assets/map.svg" alt="map" width="52" height="54" />
+                                <img class="align-self-start" src="assets/icons/map.svg" alt="map" width="52" height="54" />
                                 <div class="media-body">
                                     <h4 class="mt-0 text-uppercase">Address</h4>
                                     <p>123, Main Road, New City, My Country 123456</p>
