--- a/Split Screen Effect/index.html
+++ b/Split Screen Effect/index.html
@@ -11,13 +11,13 @@
     <section id="wrapper" class="skewed">
         <div class="layer bottom">
             <div class="content-wrap">
-                <img src="rjpalmer_newrex_001.jpg">
+                <img src="trex.jpg">
             </div>
         </div>
 
         <div class="layer top">
             <div class="content-wrap">
-                <img src="rjpalmer_newrex_003.jpg">
+                <img src="trex_skeleton.jpg">
             </div>
         </div>
         
